# px4_tracker_single

./: .gitignore  .~lock.comprehensive_data_20251004_115118.csv#  comprehensive_data_20251004_114927.csv  comprehensive_data_20251004_115118.csv  setup_drone_tracker.sh  tracking_data_20251003_123103.csv  tracking_data_20251003_123113.csv
drone_tracking_logs_20251003_122609/: bbox_info.csv  detected_target.csv  drone_attitude.csv  drone_position.csv  drone_rover_relative.csv  drone_status.csv  enhanced_target_data.csv  rover_cmd_vel.csv  rover_joints.csv  rover_pose.csv
src/drone_tracker/: CMakeLists.txt  package.xml
src/drone_tracker/config/: csv_logger_params.yaml  enhanced_tracking_params.yaml
src/drone_tracker/include/drone_tracker/: object_tracker.hpp  tracker.hpp
src/drone_tracker/launch/: drone_tracking.launch.py  fixed_drone_tracking.launch.py  spawn_turtlebot3.launch.py
src/drone_tracker/scripts/: csv_logger.py  data_logger.py  manual_drone_control.py  safety_monitor.py
src/drone_tracker/src/: gstreamer_camera_node.cpp  object_tracker.cpp  tracker.cpp  tracker_main.cpp  working_px4_control.py
